objects/IATSPayment__IATS_Aura_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>IATSPayment__AURA_Event_Id__c</fullName>
        <label>AURA Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__AURA_ID__c</fullName>
        <label>AURA ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IATS Account</label>
        <referenceTo>IATSPayment__IATS_Account__c</referenceTo>
        <relationshipName>IATS_Aura_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Mapping_10__c</fullName>
        <label>Mapping 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Mapping_11__c</fullName>
        <label>Mapping 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Mapping_12__c</fullName>
        <label>Mapping 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>iATS Aura Mapping</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>IATS Aura Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iATS Aura Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>